add dashboard status
