# backend/src/moderation/routes/dashboard.py
@@ -1,5 +1,17 @@
-def get_summary():
-    return {"message": "Dashboard summary mock"}, 200
+from dependency_injector.wiring import Provide, inject
+from moderation.cache.redis import cached_response
+from moderation.constants.cache import DASHBOARD_SUMMARY
+from moderation.core.container import Container
+from moderation.service.summary import SummaryService
+
+
+@cached_response(DASHBOARD_SUMMARY)
+@inject
+def get_summary(
+    summary_service: SummaryService = Provide[Container.summary_service],
+):
+
+    return summary_service.get_dashboard_summary(), 200
 
 
 def get_user_activity():
