# backend/src/moderation/routes/moderation_action.py
@@ -1,5 +1,6 @@
 from http import HTTPStatus
 from typing import List, Literal
+from uuid import UUID
 
 from dependency_injector.wiring import Provide, inject
 from moderation.core.container import Container
@@ -25,23 +26,23 @@ def get_content_analysis(
 
 @inject
 def approve_content(
-    content_id: str, content_service: ContentService = Provide[Container.content_service]
+    content_id: str, user: UUID, content_service: ContentService = Provide[Container.content_service]
 ) -> tuple[Content, Literal[HTTPStatus.OK]]:
     """Approve content by ID"""
-    return content_service.update_content_status(content_id, "approved"), HTTPStatus.OK
+    return content_service.update_content_status(content_id, user, "approved"), HTTPStatus.OK
 
 
 @inject
 def reject_content(
-    content_id: str, content_service: ContentService = Provide[Container.content_service]
+    content_id: str, user: UUID, content_service: ContentService = Provide[Container.content_service]
 ) -> tuple[Content, Literal[HTTPStatus.OK]]:
     """Reject content by ID"""
-    return content_service.update_content_status(content_id, "rejected"), HTTPStatus.OK
+    return content_service.update_content_status(content_id, user, "rejected"), HTTPStatus.OK
 
 
 @inject
 def flag_content(
-    content_id: str, content_service: ContentService = Provide[Container.content_service]
+    content_id: str, user: UUID, content_service: ContentService = Provide[Container.content_service]
 ) -> tuple[Content, Literal[HTTPStatus.OK]]:
     """Flag content by ID"""
-    return content_service.update_content_status(content_id, "flagged"), HTTPStatus.OK
+    return content_service.update_content_status(content_id, user, "flagged"), HTTPStatus.OK
